syntax = "proto3";
package item;

service ItemService {
    rpc CreateItem (CreateItemRequest) returns (CreateItemResponse);
    rpc ListItems (ListItemsRequest) returns (ListItemsResponse);
}

/// A new item.
message NewItem {
    /// The item's name.
    string name = 1;
    /// The item's description.
    string description = 2;
}

/// An item.
message Item {
    /// The item's id.
    int32 id = 1;
    /// The item's name.
    string name = 2;
    /// The item's description.
    string description = 3;
}

/// The request when creating an item.
message CreateItemRequest {
    /// The item to create.
    NewItem item = 1;
}

/// The response when creating an item.
message CreateItemResponse {
    /// The created item.
    Item item = 1;
}

/// The request when listing items.
message ListItemsRequest {
}

/// The response when listing items.
message ListItemsResponse {
    /// A list of items.
    repeated Item items = 1;
}
